[package]
name = "cbms"
version = "0.0.0"
edition = "2024"
description = "CBOR-based Message Stream (CBMS) Rust implementation & CLI"
readme = "README.md"
repository = "https://codeberg.org/siebert/cbtp-rs"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
ciborium = "0.2.2"
thiserror = "2.0.17"
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
rand = "0.9.2"
blake3 = "1.8.2"
serde_bytes = "0.11.19"
hex = "0.4.3"
clap = { version = "4.5.53", features = ["derive", "unicode", "wrap_help", "env"] }
async-trait = "0.1.89"
bytes = "1.11.0"
serde_json = "1.0.149"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["tokio"]
tokio = []
