[workspace]
resolver = "3"
members = [
    "crates/cbms",
    "crates/cbms-cli"
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "GPL-3.0"
repository = "https://codeberg.org/siebert/cbms-rs"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
ciborium = "0.2.2"
thiserror = "2.0.17"
rand = "0.9.2"
bytes = "1.11.0"
serde_json = "1.0.149"
clap = { version = "4.5.53", features = ["derive", "unicode", "wrap_help", "env"] }
